<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dis_tutorial7</name>
  <version>0.0.1</version>
  <description>DIS tutorial 7 packages - Simulation of a Turtlebot4 with an added robotic arm and a camera.</description>
  <maintainer email="matej.dobrevski@fri.uni-lj.si">Matej</maintainer>
  <maintainer email="vid.rijavec@fri.uni-lj.si">Vid</maintainer>
  <maintainer email="jon.muhovic@fe.uni-lj.si">Jon</maintainer>


  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
